Fix layout under container. Add style.css

--- a/resume.html
+++ b/resume.html
@@ -2,86 +2,111 @@
 <html lang="en">
 	<head>
 		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/style.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Jordan Saxe - Resume</title>
 	</head>
 	<body>
 		<div class="container">
-			<div id="intro">
-				<h1>Jordan Saxe</h1>
-				<h3>Product Quality Specialist at Shopify</h3>
-				<p>Toronto, Ontario, Canada</p>
-			</div>
-			<hr >
-
-			<div id="quote">
-				<p class="lead">Strategic thinker with a passion for enriching the lives of a community with a focus on startups</p>
-			</div>
-
-			<div id="skills">
-				<h2>Skills</h2>
-				<ul>
-					<li>Product Management</li>
-					<li>Web Design</li>
-					<li>Online Marketing</li>
-					<li>Startup Mentorship</li>
-					<li>Strategy</li>
-					<li>Quality Assurance</li>
-				</ul>
-			</div>
-
-			<div id="experience">
-				<h2>Experience</h2>
-				<div class="job shopify">
-					<p>
-						<h3>Product Quality Specialist - Shopify</h3>
-						August 2013 - Present
-					</p>
-				</div>
-
-				<div class="job jetcooper">
-					<p>
-						<h3>Product Manager - Jet Cooper</h3>
-						January 2013 - August 2013
-					</p>
-				</div>
-
-				<div class="job nascent">
-					<p>
-						<h3>App Strategist - Nascent</h3>
-						July 2012 - January 2013
-					</p>
-				</div>
-
-				<div class="job tc">
-					<p>
-						<h3>Mobile and Social Media Subject Matter Expert - TC Media</h3>
-						January 2012 - July 2012
-					</p>
-				</div>
-
-				<div class="job tc1">
-					<p>
-						<h3>Associate Account Manager - TC Media</h3>
-						September 2011 - July 2012
-					</p>
-				</div>
-
-				<div class="job tc2">
-					<p>
-						<h3>Mobile and Social Media Channel Coordinator - TC Media</h3>
-						January 2011 - January 2012
-					</p>
-				</div>
-
-				<div class="job vortex">
-					<p>
-						<h3>QA Analyst - Vortex Mobile</h3>
-						May 2010 - February 2011
-					</p>
+			<div class="row">
+			  <div class="col-md-12">
+			  	<div class="intro">
+					<div class="profile_picture">
+						<img src="img/jordan.jpg" alt="Profile Picture" class="img-circle">
+					</div>
+					<div class="headline">
+						<h1>Jordan Saxe</h1>
+						<h3>Product Quality Specialist at Shopify</h3>
+						<p>Toronto, Ontario, Canada</p>
+					</div>
+				<hr >
+				<div id="quote">
+					<p class="lead">Strategic thinker with a passion for enriching the lives of a community with a focus on startups</p>
 				</div>
 			</div>
-		</div>
+			  </div>
+			  <!-- <div class="col-md-4">.col-md-4</div> -->
+			</div>
+
+			<h2>Skills</h2>
+			<div class="row">
+				<div id="skills">
+				  <div class="col-md-4">
+					<ul class="skills">
+						<li>Product Management</li>
+						<li>Web Design</li>
+					</ul>
+					</div>
+				  <div class="col-md-4">
+				  	<ul class="skills">
+				  		<li>Online Marketing</li>
+						<li>Startup Mentorship</li>
+					</ul>
+				  </div>
+				  <div class="col-md-4">
+				  	<ul class="skills">
+				  		<li>Strategy</li>
+						<li>Quality Assurance</li>
+					</ul>
+				  </div>
+				</div>
+			</div>
+			<div class="row">
+			  <div class="col-md-12">
+			  	<div id="experience">
+					<h2>Experience</h2>
+					<div class="job shopify">
+						<p>
+							<h3>Product Quality Specialist - Shopify</h3>
+							August 2013 - Present
+						</p>
+					</div>
+
+					<div class="job jetcooper">
+						<p>
+							<h3>Product Manager - Jet Cooper</h3>
+							January 2013 - August 2013
+						</p>
+					</div>
+
+					<div class="job nascent">
+						<p>
+							<h3>App Strategist - Nascent</h3>
+							July 2012 - January 2013
+						</p>
+					</div>
+
+					<div class="job tc">
+						<p>
+							<h3>Mobile and Social Media Subject Matter Expert - TC Media</h3>
+							January 2012 - July 2012
+						</p>
+					</div>
+
+					<div class="job tc1">
+						<p>
+							<h3>Associate Account Manager - TC Media</h3>
+							September 2011 - July 2012
+						</p>
+					</div>
+
+					<div class="job tc2">
+						<p>
+							<h3>Mobile and Social Media Channel Coordinator - TC Media</h3>
+							January 2011 - January 2012
+						</p>
+					</div>
+
+					<div class="job vortex">
+						<p>
+							<h3>QA Analyst - Vortex Mobile</h3>
+							May 2010 - February 2011
+						</p>
+					</div>
+				</div>
+			  </div>
+			</div>
+			</div>
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
