--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<link href="css/bootstrap.min.css" rel="stylesheet">
+		<link href="css/bootstrap.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link href="css/style.css" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Jordan Saxe - Resume</title>
@@ -32,21 +33,21 @@
 			<div class="row">
 				<div id="skills">
 				  <div class="col-md-4">
-					<ul class="skills">
-						<li>Product Management</li>
-						<li>Web Design</li>
+					<ul class="list-unstyled">
+						<p><li><i class="fa fa-calendar fa-4x"></i>&nbsp;&nbsp;&nbsp;Product Management</li></p>
+						<p><li><i class="fa fa-desktop fa-4x"></i>&nbsp;&nbsp;&nbsp;Web Design</li></p>
 					</ul>
 					</div>
 				  <div class="col-md-4">
-				  	<ul class="skills">
-				  		<li>Online Marketing</li>
-						<li>Startup Mentorship</li>
+				  	<ul class="list-unstyled">
+				  		<p><li><i class="fa fa-play fa-4x"></i>&nbsp;&nbsp;&nbsp;Online Marketing</li></p>
+						<p><li><i class="fa fa-bolt fa-4x"></i>&nbsp;&nbsp;&nbsp;Startup Mentorship</li></p>
 					</ul>
 				  </div>
 				  <div class="col-md-4">
-				  	<ul class="skills">
-				  		<li>Strategy</li>
-						<li>Quality Assurance</li>
+				  	<ul class="list-unstyled">
+				  		<p><li><i class="fa fa-cogs fa-4x"></i>&nbsp;&nbsp;&nbsp;Strategy</li></p>
+						<p><li><i class="fa fa-check fa-4x"></i>&nbsp;&nbsp;&nbsp;Quality Assurance</li></p>
 					</ul>
 				  </div>
 				</div>
